--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jian Li"
+title                    : "Ziqiang Li"
 title_separator          : "-"
-name                     : &name "Jian Li"
-description              : &description "PhD student in Machine Learning. Institute of Information Engineering, CAS"
-url                      : https://superlj666.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Ziqiang Li"
+description              : &description "Master student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
+url                      : https://iceli1007.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "superlj666/superlj666.github.io"
+repository               : "iceli1007/iceli1007.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -77,26 +77,26 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jian Li"
-  avatar           : "avatar.png" # "jianli.jpg" #
-  bio              : "PhD student in Machine Learning. Institute of Information Engineering, CAS"
-  location         : "Beijing, China"
+  name             : "Ziqiang Li"
+  avatar           : "lzq.JPG" # "jianli.jpg" #
+  bio              : "Master student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
+  location         : "Hefei, China"
   employer         : 
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=IAJpTqYAAAAJ"
-  email            : "me@lijian.ac.cn"
+  googlescholar    : "https://scholar.google.com.hk/citations?user=mj5a8WgAAAAJ&hl"
+  email            : "iceli@mail.ustc.edu.cn"
   uri              : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  # facebook         : "profile.php?id=100008003527316"
+  # facebook         : 
   foursquare       :
-  github           : "superlj666"
+  github           : "iceli1007"
   google_plus      :
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "superlj666"
+  linkedin         :
   orcid            : 
   pinterest        :
   soundcloud       :
@@ -105,7 +105,7 @@ author:
   tumblr           :
   twitter          : 
   vine             :
-  weibo            : # "u/2200292887"
+  weibo            :
   xing             :
   youtube          : 
   wikipedia        : 
