--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Ziqiang Li"
-  avatar           : "lzq.JPG" # "jianli.jpg" #
+  avatar           : "lzq" # "jianli.jpg" #
   bio              : "Master student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
   location         : "Hefei, China"
   employer         : 
