--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ziqiang Li"
 title_separator          : "-"
 name                     : &name "Ziqiang Li"
-description              : &description "Master student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
+description              : &description "Ph.D. student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
 url                      : https://iceli1007.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "iceli1007/iceli1007.github.io"
