--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Ziqiang Li"
   avatar           : "lzq" # "jianli.jpg" #
-  bio              : "Master student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
+  bio              : "Ph.D. student in Deep Learning and Computer Vision. School of Information Science and Technology, University of Science and Technology of China"
   location         : "Hefei, China"
   employer         : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=mj5a8WgAAAAJ&hl"
